# Fetris

./: .gitignore  Cargo.toml  README.md
ai-player/: Cargo.toml
ai-player/src/: client_server_showdown.rs  main.rs  print.rs  server_receiver.rs
ai-player/src/agent/: mod.rs  simulate_action.rs  thread.rs
client/: Cargo.toml
client/src/: client_server_showdown.rs  config.rs  fall_management.rs  keyboard_listener.rs  main.rs  print.rs  server_receiver.rs
protocol/: Cargo.toml
protocol/src/: actions.rs  game.rs  lib.rs  rotation_tetrimino.rs  tetrimino.rs  tetrimino_bag.rs
proxy/: Cargo.toml
proxy/src/: main.rs
server/: Cargo.toml
server/src/: client_handler.rs  consts.rs  main.rs  network.rs
server/src/game/: game.rs  mod.rs  players.rs  pools.rs
