[package]
name = "proxy"
version = "0.1.0"
authors = ["Lancelot Owczarczak <contact@lancelot.life>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.9.2"
fetris_protocol = { path = "../protocol" }
serde = "1.0.104"
serde_json = "1.0"
